Fixed x-overflow; added new scroll styles: hidden-right, hidden-left

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,17 +6,25 @@
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
+h1{
+    color: white;
+    font-size: 5rem;
+}
+
 .ScrollContainer{
-    height: 100vh;
-    overflow-y: scroll;
     display: flex;
     justify-content: center;
-    align-items: center;
-    h1{
-        color: white;
-        font-size: 5rem;
+    height: 100vh;
+    overflow-x: hidden;
+    .scroll-section{
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;    
     }
 }
+
 .Header{
     top:0;
     left: 0;
@@ -32,22 +40,53 @@
 }
 
 .show{
-    margin: auto;
     opacity: 1;
-    justify-content: center;
     transform: translateX(0);
     transition: 1s;
 }
 
-.hidden{
+.hidden-left{
     opacity: 0;
-    filter: blur(5px);
     transition: .4s;
-    transform: translateX(-90%);
+    transform: translateX(-40%);
+}
+
+.hidden-right{
+    opacity: 0;
+    transition: .4s;
+    transform: translateX(4rem);
 }
 
 @media(prefers-reduced-motion){
     .hidden{
         transition: none;
+    }
+}
+
+.test-content-1{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+    justify-content: center;
+    margin: auto;
+    width: 80%;
+    height: 100vh;
+    h1{
+        font-size: 3rem;
+        width: 100%;
+        color: white;
+    }
+    h2{
+        width: 100%;
+    }
+    p{
+        width: 100%;
+    }
+    @media (max-width:500px) {
+        align-items: center;
+        h1{
+            font-size: 2rem;
+        }
     }
 }
